# pvalue-metric-b

./: .gitignore  README.md  helper.py  pmetric_job.sh  pyproject.toml  test.ipynb  test_metric.py
analysis/: ignore.ipynb  main.py  old.ipynb  simulations.ipynb  table.ipynb
analysis/tests/: test_main_functions.py
code/: test.ipynb
pvalue_metric/: __init__.py  helper.py  metric.py  t.py
pvalue_metric/tests/: test_helper.py  test_metric.py
simulations/: normal_simulation_different_effectsize_samplesize.py  plots.ipynb  pmetric_job.sh  simulation_helper.py  test.py
study_plan/: .xdp-high.svg-ikPiU2  diagram.ipynb
study_plan_fig/: .xdp-.goutputstream-ERCZ81-hHFlAS
tests/: test_helper.py
